syntax = "proto3";
option objc_class_prefix = "HLW";

package node_router;

// node service definition (consumed by nodes)
service Node {
  rpc Interrogate(InterrogateRequest) returns (InterrogateResponse) {}
}

message InterrogateRequest {
  string nodeId = 1;
}

message InterrogateResponse {
  bool success = 1;
  string message = 2;
  string nodeId = 3;
}

